# disp2810

./: .env  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
apps/: urls.py
apps/main/: admin.py  apps.py  views.py
apps/main/migrations/: 0001_initial.py
apps/main/static/main/css/: create_input.css
apps/main/tests/: test_db_queries.py  test_models.py  test_services.py  test_views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
src/: urls.py
src/main/: admin.py  apps.py  db_queries.py  models.py  services.py  urls.py  views.py
src/main/static/main/css/: inputs.css
src/main/templates/main/: create_input.html  inputs.html
src/main/tests/: test_data.json  test_db_queries.py  test_models.py  test_services.py  test_views.py
